@@ -1,4 +1,4 @@
-dnl CF_LIB_RULES version: 82 updated: 2015/06/27 19:09:23
+dnl CF_LIB_RULES version: 83 updated: 2015/08/05 20:44:28
 dnl ------------
 dnl Append definitions and rules for the given models to the subdirectory
 dnl Makefiles, and the recursion rule for the top-level Makefile.  If the
@@ -470,7 +470,7 @@ rm -f headers.sed headers.sh
 dnl ( generating this script makes the makefiles a little tidier :-)
 echo creating headers.sh
 cat >headers.sh <<CF_EOF
-#! /bin/sh
+#! $SHELL
 # This shell script is generated by the 'configure' script.  It is invoked in a
 # subdirectory of the build tree.  It generates a sed-script in the parent
 # directory that is used to adjust includes for header files that reside in a
