@@ -1,4 +1,4 @@
-dnl CF_MANPAGE_RENAMES version: 9 updated: 2015/04/18 08:56:57
+dnl CF_MANPAGE_RENAMES version: 10 updated: 2015/08/05 20:44:28
 dnl ------------------
 dnl The Debian people have their own naming convention for manpages.  This
 dnl option lets us override the name of the file containing renaming, or
@@ -37,7 +37,7 @@ if test "$MANPAGE_RENAMES" != no ; then
 	# Construct a sed-script to perform renaming within man-pages
 	if test -n "$MANPAGE_RENAMES" ; then
 		test ! -d man && mkdir man
-		sh $srcdir/man/make_sed.sh $MANPAGE_RENAMES >./edit_man.sed
+		$SHELL $srcdir/man/make_sed.sh $MANPAGE_RENAMES >./edit_man.sed
 	fi
 fi
 
