@@ -1,4 +1,4 @@
-MANIFEST for my-autoconf, version t20150707
+MANIFEST for my-autoconf, version ncurses-6_0
 --------------------------------------------------------------------------------
 MANIFEST                        this file
 COPYING                         copyright notice
@@ -9,8 +9,6 @@ config.guess                    autoconf's config.guess
 config.sub                      autoconf's config.sub
 headers-sh                      utility for installing/transforming header files
 install-sh                      generic install-script
-install.sh                      alternate install-script
-mkdirs.sh                       generic mkdirs script
 AcSplit                         subdirectory
 AcSplit/AC_ISC_POSIX            from gettext 0.10.40 (tin)
 AcSplit/AM_GNU_GETTEXT          macro to test for GNU gettext
