@@ -1,3 +1,8 @@
+2015-08-05  Thomas E. Dickey  <dickey@invisible-island.net>
+
+	* AcSplit/CF_LIB_RULES, AcSplit/CF_MAKEFLAGS, AcSplit/CF_MANPAGE_RENAMES, AcSplit/CF_MAN_PAGES, AcSplit/CF_SHARED_OPTS:
+	use $SHELL consistently
+
 2015-07-07  Thomas E. Dickey  <dickey@invisible-island.net>
 
 	* AcSplit/CF_NCURSES_CONFIG: PKG_CONFIG may simply be unset - fix
